# Course_work_6_Django

./: .gitignore  README.md  pyproject.toml
market_postgres/: docker-compose.yaml  nginx.conf
skymarket/ads/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_ad_image.py  0003_alter_comment_options.py  0004_alter_ad_description_alter_ad_price_alter_ad_title.py  0005_alter_ad_image_alter_comment_text.py
skymarket/fixtures/: users.json
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  managers.py  models.py  serializers.py  urls.py
skymarket/users/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_user_is_active.py  0004_alter_user_phone.py  0005_alter_user_first_name_alter_user_image_and_more.py
