[tool.poetry]
name = "course-work-6-django"
version = "0.1.0"
description = ""
authors = ["VladmimirShtefan <shtefanvladimir14@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work_6_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
django-cors-headers = "^3.13.0"
drf-spectacular = "^0.25.1"
djoser = "^2.1.0"
django-phonenumber-field = "^7.0.1"
phonenumbers = "^8.13.2"
pillow = "^9.3.0"
psycopg2-binary = "^2.9.5"
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
